Adds script to add projects(content)

--- a/index.html
+++ b/index.html
@@ -155,41 +155,7 @@
 
             <section id="projects">
                 <!-- <h3>Your projects</h3> -->
-                <div id="projects-grid">
-                    <div data-class="project-box">
-                        <h4>Project 1</h4>
-                        <div data-detail="details">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eaque iste, aliquid hic nemo suscipit fugiat dolorum laborum aliquam impedit facere provident dignissimos esse illum rerum saepe quam sint. Quisquam!</p>
-                            <div data-preview="preview"></div>
-                        </div>
-                        
-                        <div data-action="respond">
-                            <button data-action="commend"><i class="fa-solid fa-leaf"></i><span></span></button>
-                            <button data-action="comment"><i class="fa-regular fa-message"></i><span></span></button>
-                            <button data-action="fork"><i class="fa-solid fa-code-fork"></i><span></span></button>
-                        </div>
-                    </div>  
-                    <div>
-                        <h4>Project 2</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti a officiis repellat, quae excepturi mollitia repellendus! Ducimus voluptates possimus, maiores accusamus voluptatum nostrum quis eaque consequatur distinctio quo autem error.s</p>
-                    </div>
-                    <div>
-                        <h4>Project 3</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti a officiis repellat, quae excepturi mollitia repellendus! Ducimus voluptates possimus, maiores accusamus voluptatum nostrum quis eaque consequatur distinctio quo autem error.s</p>
-                    </div>
-                    <div>
-                        <h4>Project 4</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti a officiis repellat, quae excepturi mollitia repellendus! Ducimus voluptates possimus, maiores accusamus voluptatum nostrum quis eaque consequatur distinctio quo autem error.s</p>
-                    </div>
-                    <div>
-                        <h4>Project 5</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti a officiis repellat, quae excepturi mollitia repellendus! Ducimus voluptates possimus, maiores accusamus voluptatum nostrum quis eaque consequatur distinctio quo autem error.s</p>
-                    </div>
-                    <div>
-                        <h4>Project 6</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti a officiis repellat, quae excepturi mollitia repellendus! Ducimus voluptates possimus, maiores accusamus voluptatum nostrum quis eaque consequatur distinctio quo autem error.s</p>
-                    </div>
-                </div>
+                <div id="projects-grid"></div>
             </section> <!-- #main-content end -->
 
 
