Adds script to add team members

--- a/index.html
+++ b/index.html
@@ -166,26 +166,15 @@
 
 
             <section id="team" data-page="team" class="swiped">
-                <h3>Team</h3>
-                <div>
-                    <div data-icon="profile-pic"></div>
-                    <p>@username</p>
-                    <p>status</p>
-                </div>
-                <div>
-                    <div data-icon="profile-pic"></div>
-                    <p>@username</p>
-                    <p>status</p>
-                </div>
-                <div>
-                    <div data-icon="profile-pic"></div>
-                    <p>@username</p>
-                    <p>status</p>
-                </div>
-                <div>
-                    <div data-icon="profile-pic"></div>
-                    <p>@username</p>
-                    <p>status</p>
+                <!-- <h3>Team</h3> -->
+                <div data-class="member">
+                    <div data-profile="picture">
+                        <div data-status="status"></div>
+                    </div>
+                    <p data-profile="username">User</p>
+                    <p data-profile="address">@username</p>
+                    <p data-profile="status">status</p>
+                    <button data-message="message"><i class="fa-regular fa-message"></i></button>
                 </div>
             </section>
 
