Adds more responsive design

--- a/index.html
+++ b/index.html
@@ -148,10 +148,6 @@
         </div>
 
 
-
-
-
-
         <section id="content-dash">
 
             <section id="projects" data-page="projects">
@@ -168,27 +164,11 @@
             <section id="team" data-page="team" class="swiped">
                 <!-- <h3>Team</h3> -->
             </section>
-
-
         </section>
 
 
         <div id="modal-container"></div>
-
-
-
-
-
-        
-
-
-
-      
-
-
-        <section id="community">
-
-        </section>
+        <!-- <section id="community"></section> -->
     </div>
 </body>
 </html>
