Adds more responsive design

--- a/index.html
+++ b/index.html
@@ -151,18 +151,20 @@
         <section id="content-dash">
 
             <section id="projects" data-page="projects">
-                <!-- <h3>Your projects</h3> -->
+                <h3>Your projects</h3>
                 <div id="projects-grid"></div>
             </section> <!-- #main-content end -->
 
 
             <section id="announcements" data-page="announcements" class="swiped">
-                <!-- <h3>Announcements</h3> -->
+                <h3>Announcements</h3>
+                <div id="announce-grid"></div>
             </section>
 
 
             <section id="team" data-page="team" class="swiped">
-                <!-- <h3>Team</h3> -->
+                <h3>Team</h3>
+                <div id="team-grid"></div>
             </section>
         </section>
 
