Adds styling to scroll bar

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
 
 
         <div id="modal-container"></div>
+
+        <section id="profile"></section>
+
         <!-- <section id="community"></section> -->
     </div>
 </body>
