Cleans CSS Code

--- a/index.html
+++ b/index.html
@@ -171,7 +171,49 @@
 
         <div id="modal-container"></div>
 
-        <section id="profile"></section>
+        <section id="profile">
+            <h3>Profile</h3>
+            <img src="./images/profile.png" alt="User profile picture"
+            height="50px">
+            <h4>Fred Mark Baldeviso</h4>
+            <p>Division: Development Team</p>
+            <p>Designation: Web Developer</p>
+            
+            
+            <div id="contacts">
+                <h4> Contact Info</h4>
+                <p>
+                    <i class="fa-brands fa-github"></i>
+                    Github: 
+                    <a href="https://github.com/makieldeviso">https://github.com/makieldeviso</a>
+                </p>
+                <p>
+                    <i class="fa-solid fa-envelope"></i>
+                    E-mail: 
+                    <span>fred-trashpanda@email.co</span>
+                </p>
+                <p>
+                    <i class="fa-solid fa-mobile-screen"></i>
+                    Phone: 
+                    <tel>+63 123 456 789</tel>
+                </p>
+            </div>
+
+            <div id="work-stats">
+                <h4>Work Statistics</h4>
+                <p>Completed: <span id="completed-task"></span></p>
+                <p>Ongoing:<span id="ongoing-task"></span></p>
+                <p>Not Yet Started:<span id="nys-task"></span></p>
+            </div>
+
+            <div id="time-record">
+                <h4>Monthly Time Record</h4>
+                <h5>March 2023</h5>
+                <p>31 hrs, 15 minutes</p>
+            </div>
+
+
+        </section>
 
         <!-- <section id="community"></section> -->
     </div>
