Changed sidebar links to buttons

--- a/index.html
+++ b/index.html
@@ -77,53 +77,71 @@
                 <h3>Dashboard</h3>
                 <nav>
                     <ul>
-                        <li><a href="#header-bar">
-                            <i class="fa-solid fa-house"></i>
-                            <span>Home</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-house"></i>
+                                <span>Home</span>
+                            </button>
+                        </li>
 
-                        <li><a href="">
-                            <i class="fa-solid fa-id-card"></i>
-                            <span>Profile</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-id-card"></i>
+                                <span>Profile</span>
+                            </button>
+                        </li>
 
-                        <li><a href="">
-                            <i class="fa-solid fa-envelope"></i>
-                            <span>Messages</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-envelope"></i>
+                                <span>Messages</span>
+                            </button>
+                        </li>
 
-                        <li><a href="">
-                            <i class="fa-solid fa-clock"></i>
-                            <span>History</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-clock"></i>
+                                <span>History</span>
+                            </button>
+                        </li>
 
-                        <li><a href="">
-                            <i class="fa-solid fa-rectangle-list"></i>
-                            <span>Tasks</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-rectangle-list"></i>
+                                <span>Tasks</span>
+                            </button>
+                        </li>
 
-                        <li><a href="">
-                            <i class="fa-solid fa-people-group"></i>
-                            <span>Communities</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-people-group"></i>
+                                <span>Communities</span>
+                            </button>
+                        </li>
                     </ul>
 
 
                     <ul>
-                        <li><a href="">
-                            <i class="fa-solid fa-gear"></i>
-                            <span>Settings</span> 
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-gear"></i>
+                                <span>Settings</span> 
+                            </button>
+                        </li>
 
-                        <li><a href="">
-                            <i class="fa-solid fa-hand-holding-hand"></i>
-                            <span>Support</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-hand-holding-hand"></i>
+                                <span>Support</span>
+                            </button>
+                        </li>
 
-                        <li><a href="">
-                            <i class="fa-solid fa-shield-cat"></i>
-                            <span>Privacy</span>
-                        </a></li>
+                        <li>
+                            <button>
+                                <i class="fa-solid fa-shield-cat"></i>
+                                <span>Privacy</span>
+                            </button>
+                        </li>
                     </ul>
                 </nav>
             </section> <!-- #sidebar (end)-->
