Adds section toggling feature
Sidebar buttons toggles contents to appear on screen
Feature accessible for smaller screens

--- a/index.html
+++ b/index.html
@@ -78,42 +78,42 @@
                 <nav>
                     <ul>
                         <li>
-                            <button>
+                            <button data-id="content-dash" class="clicked">
                                 <i class="fa-solid fa-house"></i>
                                 <span>Home</span>
                             </button>
                         </li>
 
                         <li>
-                            <button>
+                            <button data-id="profile">
                                 <i class="fa-solid fa-id-card"></i>
                                 <span>Profile</span>
                             </button>
                         </li>
 
                         <li>
-                            <button>
+                            <button data-id="messages">
                                 <i class="fa-solid fa-envelope"></i>
                                 <span>Messages</span>
                             </button>
                         </li>
 
                         <li>
-                            <button>
+                            <button data-id="history">
                                 <i class="fa-solid fa-clock"></i>
                                 <span>History</span>
                             </button>
                         </li>
 
                         <li>
-                            <button>
+                            <button data-id="tasks">
                                 <i class="fa-solid fa-rectangle-list"></i>
                                 <span>Tasks</span>
                             </button>
                         </li>
 
                         <li>
-                            <button>
+                            <button data-id="communities">
                                 <i class="fa-solid fa-people-group"></i>
                                 <span>Communities</span>
                             </button>
@@ -123,21 +123,21 @@
 
                     <ul>
                         <li>
-                            <button>
+                            <button data-id="settings">
                                 <i class="fa-solid fa-gear"></i>
                                 <span>Settings</span> 
                             </button>
                         </li>
 
                         <li>
-                            <button>
+                            <button data-id="support">
                                 <i class="fa-solid fa-hand-holding-hand"></i>
                                 <span>Support</span>
                             </button>
                         </li>
 
                         <li>
-                            <button>
+                            <button data-id="privacy">
                                 <i class="fa-solid fa-shield-cat"></i>
                                 <span>Privacy</span>
                             </button>
@@ -224,12 +224,12 @@
 
                     <p>
                         <i class="fa-regular fa-hourglass-half"></i>
-                        Ongoing:<span id="ongoing-task"></span>
+                        Ongoing: <span id="ongoing-task"></span>
                     </p>
 
                     <p>
                         <i class="fa-solid fa-spinner"></i>
-                        Not Yet Started:<span id="nys-task"></span>
+                        Not Yet Started: <span id="nys-task"></span>
                     </p>
                 </div>
     
