Edits projects content
Set links attribute to target = "_blank";

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <div id="profiler">
                     <div id="profile-picture"></div>
                     <div id="user-detail">
-                        <h2>USER</h2>
-                        <h3>(@eyeBags.com)</p>
+                        <h2>Fred R. Baldeviso</h2>
+                        <h3>@waryur</h3>
                     </div>
                 </div>
     
@@ -193,9 +193,8 @@
                 <div id="profile-grid">
     
                     <div id="main-identify">
-                        <img src="./images/profile.png" alt="User profile picture"
-                    height="50px">
-                        <h4>Fred Mark Baldeviso</h4>
+                        <img src="./images/profile.png" alt="User profile picture">
+                        <h4>Fred R. Baldeviso</h4>
                         <p>Division: Development Team</p>
                         <p>Designation: Web Developer</p>
                     </div>
