Adds placeholder content to communities

--- a/index.html
+++ b/index.html
@@ -252,6 +252,74 @@
                 <div id="tasks-grid">
                 </div>
             </section>
+
+            <section id="communities" class="minimized" data-section="communities">
+                <h3>Communities</h3>
+                <div id="communities-grid">
+
+                    <div >
+                        <div data-class="team-photo" id="dev"></div>
+                        <h4 data-class="team-name">Development Team</h4>
+                        <p data-class="team-number">30 Members</p>
+                        <div data-class="container">
+                            <p data-class="joined"><i class="fa-solid fa-check"></i> Joined</p>
+                        </div>
+                        
+                    </div>
+
+                    <div >
+                        <div data-class="team-photo" id="admin"></div>
+                        <h4 data-class="team-name">Administrative Division</h4>
+                        <p data-class="team-number">20 Members</p>
+                        <div data-class="container">
+                            <button data-class="connect">Connect</button>
+                        </div>
+                    </div>
+
+                    <div >
+                        <div data-class="team-photo" id="finance"></div>
+                        <h4 data-class="team-name">Accounting and Finance Division</h4>
+                        <p data-class="team-number">8 Members</p>
+                        <div data-class="container">
+                            <button data-class="connect">Connect</button>
+                        </div>
+                    </div>
+
+                    <div >
+                        <div data-class="team-photo" id="legal"></div>
+                        <h4 data-class="team-name">Legal Division</h4>
+                        <p data-class="team-number">10 Members</p>
+                        <div data-class="container">
+                            <button data-class="connect">Connect</button>
+                        </div>
+                    </div>
+
+                    <div >
+                        <div data-class="team-photo" id="it"></div>
+                        <h4 data-class="team-name">I.T. Staff</h4>
+                        <p data-class="team-number">5 Members</p>
+                        <div data-class="container">
+                            <button data-class="connect">Connect</button>
+                        </div>
+                    </div>
+
+                    <div >
+                        <div data-class="team-photo" id="director"></div>
+                        <h4 data-class="team-name">Director's Office</h4>
+                        <p data-class="team-number">5 Members</p>
+                        <div data-class="container">
+                            <button data-class="connect">Connect</button>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+                </div>
+            </section>
     
             <div id="modal-container">
                 <dialog class="errorModal" data-id="error">
@@ -264,7 +332,7 @@
                         <i class="fa-solid fa-screwdriver-wrench" data-id="fix-icon"></i>
 
                         <p>Site is undergoing system maintenance. The dashboard still works with limited function. So if you are seeing this message it means that you can't use this feature. I hope that you can still be productive. Good day and keep up the good work. </p>
-                        <p id="error-author">-I.T.</p>
+                        <p id="error-author">-I.T. Staff</p>
 
                     </div>
                 </dialog>
@@ -288,6 +356,10 @@
             </div>
 
             <div id="tasks-widget" class="minimized" data-widget="tasks">
+
+            </div>
+
+            <div id="communities-widget" class="minimized" data-widget="communities">
 
             </div>
 
