--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="main.js" defer></script>
     <meta name="author" content="Fred Mark baldeviso">
     <meta name="description" content="Admin dashboard">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/ff4bf87dd5.js" crossorigin="anonymous"></script>
     <title>Dashboard</title>
 </head>
